[gd_scene load_steps=89 format=3 uid="uid://8m35sichnvau"]

[ext_resource type="Script" uid="uid://dd3bn3gr2dtvt" path="res://scripts/boss.gd" id="1_wqpjq"]
[ext_resource type="Texture2D" uid="uid://b6ft2oymd67g0" path="res://assets/characters/enemies/boss/orc2_attack_with_shadow.png" id="2_2cdgk"]
[ext_resource type="Texture2D" uid="uid://cyded5fhmgoxx" path="res://assets/characters/enemies/boss/orc2_death_with_shadow.png" id="3_qsl3t"]
[ext_resource type="Texture2D" uid="uid://b6t1uq7uflrij" path="res://assets/characters/enemies/boss/orc2_idle_with_shadow.png" id="4_2avx2"]
[ext_resource type="Texture2D" uid="uid://ibqpnr3syrp4" path="res://assets/characters/enemies/boss/orc2_walk_with_shadow.png" id="5_5f346"]
[ext_resource type="AudioStream" uid="uid://dct6hhhf2ktyr" path="res://assets/music/enemy_damage.wav" id="6_0onds"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lfs1x"]
atlas = ExtResource("2_2cdgk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eiau"]
atlas = ExtResource("2_2cdgk")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn2fc"]
atlas = ExtResource("2_2cdgk")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqd3i"]
atlas = ExtResource("2_2cdgk")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mautr"]
atlas = ExtResource("2_2cdgk")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho3mf"]
atlas = ExtResource("2_2cdgk")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7apjh"]
atlas = ExtResource("2_2cdgk")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh5fr"]
atlas = ExtResource("2_2cdgk")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dlq0"]
atlas = ExtResource("3_qsl3t")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_25au8"]
atlas = ExtResource("3_qsl3t")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk50o"]
atlas = ExtResource("3_qsl3t")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_325t2"]
atlas = ExtResource("3_qsl3t")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bagrn"]
atlas = ExtResource("3_qsl3t")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3gxo"]
atlas = ExtResource("3_qsl3t")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dd2w"]
atlas = ExtResource("3_qsl3t")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj5kv"]
atlas = ExtResource("3_qsl3t")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1yhm"]
atlas = ExtResource("4_2avx2")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbxxu"]
atlas = ExtResource("4_2avx2")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyxkr"]
atlas = ExtResource("4_2avx2")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhysf"]
atlas = ExtResource("4_2avx2")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g25uh"]
atlas = ExtResource("5_5f346")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4ffm"]
atlas = ExtResource("5_5f346")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lngmi"]
atlas = ExtResource("5_5f346")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q24ql"]
atlas = ExtResource("5_5f346")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2c66"]
atlas = ExtResource("5_5f346")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_giyuy"]
atlas = ExtResource("5_5f346")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqmr5"]
atlas = ExtResource("2_2cdgk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1tdt"]
atlas = ExtResource("2_2cdgk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm5ke"]
atlas = ExtResource("2_2cdgk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymkos"]
atlas = ExtResource("2_2cdgk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6qm0"]
atlas = ExtResource("2_2cdgk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mrsh"]
atlas = ExtResource("2_2cdgk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft6lg"]
atlas = ExtResource("2_2cdgk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueo3c"]
atlas = ExtResource("2_2cdgk")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_863od"]
atlas = ExtResource("3_qsl3t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh7ji"]
atlas = ExtResource("3_qsl3t")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3xpi"]
atlas = ExtResource("3_qsl3t")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w2ut"]
atlas = ExtResource("3_qsl3t")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_es0rk"]
atlas = ExtResource("3_qsl3t")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq7oa"]
atlas = ExtResource("3_qsl3t")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gqtx"]
atlas = ExtResource("3_qsl3t")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6jog"]
atlas = ExtResource("3_qsl3t")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_02csv"]
atlas = ExtResource("4_2avx2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_te2y6"]
atlas = ExtResource("4_2avx2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbhct"]
atlas = ExtResource("4_2avx2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajbp4"]
atlas = ExtResource("4_2avx2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_en4il"]
atlas = ExtResource("5_5f346")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efibt"]
atlas = ExtResource("5_5f346")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tphtu"]
atlas = ExtResource("5_5f346")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoae0"]
atlas = ExtResource("5_5f346")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wya7"]
atlas = ExtResource("5_5f346")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i78ob"]
atlas = ExtResource("5_5f346")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b55u5"]
atlas = ExtResource("2_2cdgk")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc18t"]
atlas = ExtResource("2_2cdgk")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i4fg"]
atlas = ExtResource("2_2cdgk")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vfmo"]
atlas = ExtResource("2_2cdgk")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8ox1"]
atlas = ExtResource("2_2cdgk")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1el4"]
atlas = ExtResource("2_2cdgk")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecxjq"]
atlas = ExtResource("2_2cdgk")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lajfe"]
atlas = ExtResource("2_2cdgk")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_osgdo"]
atlas = ExtResource("3_qsl3t")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qn84"]
atlas = ExtResource("3_qsl3t")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln60v"]
atlas = ExtResource("3_qsl3t")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5neu"]
atlas = ExtResource("3_qsl3t")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b525p"]
atlas = ExtResource("3_qsl3t")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wjth"]
atlas = ExtResource("3_qsl3t")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib0dk"]
atlas = ExtResource("3_qsl3t")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5bxm"]
atlas = ExtResource("3_qsl3t")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0go2"]
atlas = ExtResource("4_2avx2")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_icamf"]
atlas = ExtResource("4_2avx2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvw2j"]
atlas = ExtResource("4_2avx2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kffk7"]
atlas = ExtResource("4_2avx2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2fsw"]
atlas = ExtResource("5_5f346")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxgcl"]
atlas = ExtResource("5_5f346")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbor3"]
atlas = ExtResource("5_5f346")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sve4"]
atlas = ExtResource("5_5f346")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ql4"]
atlas = ExtResource("5_5f346")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3q3v"]
atlas = ExtResource("5_5f346")
region = Rect2(320, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c0bne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfs1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eiau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn2fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqd3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mautr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho3mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7apjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh5fr")
}],
"loop": false,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dlq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25au8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk50o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_325t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bagrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3gxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dd2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj5kv")
}],
"loop": false,
"name": &"back_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1yhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbxxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyxkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhysf")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g25uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4ffm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lngmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q24ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2c66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giyuy")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqmr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1tdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm5ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymkos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6qm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mrsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft6lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueo3c")
}],
"loop": false,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_863od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh7ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3xpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w2ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es0rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq7oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gqtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6jog")
}],
"loop": false,
"name": &"front_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02csv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te2y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbhct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajbp4")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_en4il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efibt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tphtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoae0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wya7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i78ob")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b55u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc18t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i4fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vfmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8ox1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1el4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecxjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lajfe")
}],
"loop": false,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_osgdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qn84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln60v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5neu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b525p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wjth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib0dk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5bxm")
}],
"loop": false,
"name": &"side_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0go2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icamf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvw2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kffk7")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2fsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxgcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbor3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sve4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ql4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3q3v")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tms16"]
radius = 76.0066

[sub_resource type="CircleShape2D" id="CircleShape2D_a7mj6"]
radius = 13.0384

[sub_resource type="CircleShape2D" id="CircleShape2D_vu5x8"]
radius = 35.0

[node name="boss" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_wqpjq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.38419e-07, -16)
scale = Vector2(1.79688, 1.78125)
sprite_frames = SubResource("SpriteFrames_c0bne")
animation = &"side_walk"

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="detection" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_tms16")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -11)
shape = SubResource("CircleShape2D_a7mj6")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="hitbox" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(-1, -22)
shape = SubResource("CircleShape2D_vu5x8")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0.176287, 0.104907, 1)
offset_left = -20.0
offset_top = -59.0
offset_right = 370.0
offset_bottom = -19.0
scale = Vector2(0.1, 0.1)
value = 100.0
show_percentage = false

[node name="EnemyAttackTimer" type="Timer" parent="."]

[node name="ForgetPlayerTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtEffectTimer" type="Timer" parent="."]
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_0onds")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="EnemyAttackTimer" to="." method="_on_enemy_attack_timer_timeout"]
[connection signal="timeout" from="HurtEffectTimer" to="." method="_on_hurt_effect_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
